--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Dublin</title>
 </head>
 <body>
@@ -14,5 +15,10 @@
             <li><a href="coast.html">coast</a></li>
         </ul>
     </nav>
+    <section>
+        <figure>
+            <img src="assets/images/city.jpg" alt="an image of urban Dublin">
+        </figure>
+    </section>
 </body>
 </html>
